# PRINTF

./: CMakeLists.txt  Makefile  ft_count_num.c  ft_itoa.c  ft_itoabase.c  ft_printf.c  ft_printf.h  main.c  mistakes  print_c.c  print_d.c  print_o.c  print_p.c  print_s.c  print_u.c  print_x.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_count_num.c  ft_countwords.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoabase.c  ft_lstadd.c  ft_lstaddend.c  ft_lstcountnumb.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+25 more)
libft/includes/: libft.h
